--- a/mlruns/0/meta.yaml
+++ b/mlruns/0/meta.yaml
@@ -1,4 +1,4 @@
-artifact_location: file:///D:/UsingSpace/Projects/Papers/Industrial%20Image%20Anomaly%20Detection%20using%20Graph%20Neural%20Network/GVAE/mlruns/0
+artifact_location: file:///D:/UsingSpace/Projects/Papers/Industrial%20Image%20Anomaly%20Detection%20using%20Graph%20Neural%20Network/GVAE/ADVisionGNN/mlruns/0
 creation_time: 1740513010275
 experiment_id: '0'
 last_update_time: 1740513010275
